<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/colorGrey"
        android:textSize="36sp"
        android:textStyle="bold"
        android:layout_marginBottom="50dp"/>

    <ScrollView
        android:id="@+id/infoScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorYellow"
                android:text="@string/user"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/userText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:onClick="openProfile"
                android:textColor="@color/colorGrey"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/location"
                android:textColor="@color/colorYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/locationText"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/type"
                android:textColor="@color/colorYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/typeText"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/price"
                android:textColor="@color/colorYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/priceText"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/description"
                android:textColor="@color/colorYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/descriptionText"
                android:textColor="@color/colorGrey"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/matchButton"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/login_btn_background"
        android:text="@string/match"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:onClick="sendMatch"/>

</LinearLayout>